--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,16 @@
     background-color: blue;
 }
 
-button:disabled {
-    background-color: gray;
-    cursor: not-allowed;
+button {
+    border: 4px solid black!important;
+    border-radius: 0!important;
+    padding: .25rem .75rem!important;
+    box-shadow: 4px 4px 0 black!important;
+    margin-bottom: 1rem;
+    transition: all .1s!important;
+    outline: none !important;
+}
+
+button:hover {
+    box-shadow: 2px 2px 0 black!important;
 }
