--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
     cursor: not-allowed;
 }
 
+.medium-violet-red {
+    background-color: mediumvioletred;
+}
+
+.midnight-blue {
+    background-color: midnightblue;
+}
+
 button {
     border: 4px solid black!important;
     border-radius: 0!important;
